--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
             </div>
         </header>
         <main class="flex flex-col lg:w-1/2 lg:justify-center lg:items-center">
-            <form class="flex flex-col mt-8 lg:w-2/3 xl:w-1/2">
+            <form class="flex flex-col mt-8 lg:w-2/3 xl:w-1/2" method="post">
                 <p class="hidden lg:flex lg:text-5xl lg:font-bold lg:mb-20">Sign up</p>
                 <label class="font-bold lg:text-xl" for="email">Email address</label>
-                <input class="pl-5 mt-5 mb-8 h-10 bg-input border-2 border-input-b rounded-lg lg:h-16" type="email" name="email" id="email">
+                <input class="pl-5 mt-5 h-10 bg-input border-2 border-input-b invalid:border-input-red rounded-lg lg:h-16" type="email" name="email" id="email">
+                <p class="invisible m-3" id="errorEmail">Please enter a valid address mail</p>
                 <label class="font-bold lg:text-xl" for="password">Password</label>
-                <input class="pl-5 mt-5 mb-10 h-10 bg-input border-2 border-input-b rounded-lg lg:h-16" type="password" name="password" id="password">
-                <button class="h-10 rounded-lg bg-gradient-to-r from-action-l to-action-r hover:from-action-active-l hover:to-action-active-r font-bold text-lg lg:h-16" type="submit">Sign up</button>
+                <input class="pl-5 mt-5 h-10 bg-input border-2 border-input-b invalid:border-input-red rounded-lg lg:h-16" type="password" name="password" id="password">
+                <p class="invisible m-3" id="errorPassword">Please enter a valid password</p>
+                <button class="h-10 rounded-lg bg-gradient-to-r from-action-l to-action-r hover:from-action-active-l hover:to-action-active-r font-bold text-lg lg:h-16" type="submit" id="btnSubmit">Sign up</button>
             </form>
             <div class="flex flex-row-reverse mt-32 lg:w-1/2 lg:mt-24 lg:pt-24 lg:border-t lg:border-input-b">
                 <p class="text-sm font-normal text-smTxt lg:text-xl">Already have an account ? <span class="font-bold text-white">Sign in</span></p>
